clean: small cleanup